--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
+    <title>Flux.Fail</title>
   </head>
   <body>
-    <div id="hello"></div>
+    <div id="app"></div>
     <script src="app.js"></script>
   </body>
 </html>
