--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title>Flux.Fail</title>
     <link rel="stylesheet" href="fluxfail.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#c6a700">
+    <meta name="theme-color" content="#005cb2">
   </head>
   <body>
     <div id="app"></div>
