--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Flux.Fail</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="fluxfail.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
