--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flux.Fail</title>
+    <title>flux.fail</title>
     <link rel="stylesheet" href="/assets/css/w3.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
@@ -12,12 +12,13 @@
 <body>
 
     <section class="hero">
-        <div class="background-image" style="background: linear-gradient( rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6) ),url(../assets/trainstation.jpg) no-repeat center center fixed;
-        "></div>
+        <div
+            class="background-image"
+            style="background: linear-gradient( rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6) ),url(../assets/588599304-2048x2048.jpg) no-repeat center bottom fixed"></div>
 
         <div class="hero-content-area">
             <img src='./assets/logo.png' />
-            <h1>Worauf wartest du</h1>
+            <h1>WORAUF WARTEST DU</h1>
 
             <a href="https://app.flux.fail/" class="btn">LOG IN</a>
         </div>
@@ -26,7 +27,7 @@
         <img class="logo_sub" src='./assets/logo_text.png' />
         <h3 class="w3-center">
             VERSPÄTUNGEN ÖFFENTLICHER VERKEHRSMITTEL MELDEN.<br>
-            FRUST ABLASSEN, WEITER FAHREN.<br>
+            FRUST ABLASSEN, VORWÄRTS KOMMEN.<br>
             FOREVER FREE.
         </h3>
     </section>
@@ -44,12 +45,13 @@
                     allgemeinen Statistiken verwertet.
                 </p>
                 <p>
-                    Selbstverständlich können problemlos Informationen zu einzelnen Linien angefragt werden, bzw.
-                    häufig genutzte Linien als Favoriten abgespeichert werden.
+                    Selbstverständlich können problemlos Informationen zu einzelnen Linien abgefragt werden, bzw.
+                    häufig genutzte Linien als Favoriten gespeichert werden.
                 </p>
                 <div class="info">
                     <h4>Empower Yourself!</h4>
-                    <p>Lade Freunde dazu ein, auf deiner Linie mitzumachen.
+                    <p>
+                        Lade Freunde dazu ein, auf deiner Linie mitzumachen.
                         So bekommst du mehr aktuelle Informationen.
                         Je mehr Nutzer, desto mehr Verspätungs-Meldungen.</p>
                 </div>
@@ -64,13 +66,12 @@
             </div>
             <div class="col">
                 <h3>Erhalte Angebote zu Alternativen Verkehrsmitteln</h3>
-                <p>Sobald Du eine Verspätung gemeldet hast, werden Dir - sofern vorhanden - alternative Linien oder
-                    Verkehrsmittel angeboten. Das kann eine andere Verbindung mit den öffentlichen Verkehrsmitteln
-                    sein, aber auch ein Angebot von Dritten, z.B. Taxi-Anbieter, Fahrradverleih oder
-                    Car-Sharing-Unternehmen.
+                <p>
+                    Sobald wir eine kritische Nutzerbasis erreichen, werden Dir nach der Meldung einer Verspätung
+                    - sofern vorhanden - alternative Linien oder Verkehrsmittel angeboten. Das kann eine andere
+                    Verbindung mit den öffentlichen Verkehrsmitteln sein, aber auch ein Angebot von Dritten, z.B.
+                    Taxi-Anbieter, Fahrradverleih oder Car-Sharing-Unternehmen.
                 </p>
-                <p>Die Möglichkeit Angebote über alternative Verkehrsmittel zu erhalten ist optional und kann über
-                    Deine Account-Einstellungen deaktiviert werden.</p>
                 <div class="info">
                     <h4>Anders fahren, Zeit sparen!</h4>
                     <p>Es kann viel Zeit sparen, über aktuelle Ausweichmöglichkeiten informiert zu sein.</p>
@@ -85,16 +86,23 @@
             </div>
             <div class="col">
                 <h3>Sammle Punkte und erhalte Flux-Kompensationen</h3>
-                <p>Für jede gemeldete Verspätung erhälst Du einen Flux-Punkt. Besonders zeitraubende Verspätungen
-                    werden mit mehr Punkten gewertet, sobald die Meldung als konfirmiert gilt. (Jede Verspätung kann
-                    natürlich nur einmal pro User gemeldet werden.)</p>
-                <p>Du kannst Verspätungs-König des Tages, deiner Linie oder sogar Deiner Stadt werden. - Wer will das
-                    schon? Eigentlich niemand. Aber zumindest können ausreichend gesammelte Punkte bei vielen
-                    alternativen Transportunternehmen eingetauscht werden. Freie Taxifahrt gefällig?</p>
+                <p>
+                    Jede gemeldete Verspätung ist zu Beginn einen Punkt wert. Andere Benutzer können Meldungen
+                    bestätigen, dadurch steigt der Wert der Meldung um jeweils einen weiteren Punkt. Die Punkte
+                    sollen in erster Linie dem einzelnen Benutzer dabei helfen die Zuverlässigkeit und Richtigkeit
+                    der Meldungen besser bewerten zu können.
+                </p>
+                <p>
+                    Ab Erreichen einer kritischen Nutzerbasis ist angedacht, dass Punkte gesammelt und gegen
+                    Wertgutscheine und Rabattkarten getauscht werden können.
+                </p>
                 <div class="info">
                     <h4>Mach aus dem Ärgernis ein kleines Spiel.</h4>
-                    <p>Punkte sammeln bringt nicht nur Vorteile, sondern macht auch Spaß.
-                        Schon wieder zu spät? Vielleicht wirst Du dadurch ja wenigstens einmal König.</p>
+                    <p>
+                        Punkte sammeln bringt nicht nur Vorteile, sondern macht auch Spaß, denn so kannst du dich
+                        mit anderen Benutzern messen. Na, wer hat in eurem Team die meisten Verspätungen auf dem
+                        Arbeitsweg?
+                    </p>
                 </div>
             </div>
 
@@ -109,14 +117,24 @@
             </div>
             <div class="col">
                 <h3>Hilf mit, die Statistiken zu verbessern</h3>
-                <p>Jede konfirmierte, gemeldete Verspätung geht in die allgemeinen Statistiken über. Auf flux.fail kann
-                    jeder die Verspätungs-Statistiken einzelner Linien, Städte und Anbieter einsehen. Die Werte werden
-                    auch an Dritte weitergegeben, sofern diese daraus Nutzen ziehen können
+                <p>
+                    flux.fail erfasst in erster Linie die Verspätungen der Fahrgäste, nicht direkt die der
+                    Verkehrsunternehmen. Die Verkehrsunternehmen veröffentlichen regelmäßig eigenen Zahlen.
+                    Mithilfe unserer Daten wird endlich eine Möglichkeit geschaffen die offiziellen Zahlen
+                    der Verkehrsunternehmen mit den Meldungen der Fahrgäste gegenüberzustellen und zu
+                    vergleichen.
+                </p>
+                <p>
+                    Aus diesem Grund veröffentlichen wir auch umgehend alle Meldungen. Sobald wir ausreichend
+                    Testdaten gesammelt haben, werden wir beginnen unsere Meldungen in Form von Web-Graphen
+                    online zu stellen und die Daten so für jedermann leicht durchsuchbar zu machen.
                 </p>
                 <div class="info">
-                    <h4>Deine Persönlichen Ergebnisse:</h4>
-                    <p>Dein Profil erstellt automatisch Deine ganz eigenen Statistiken.
-                        So bekommst Du einen persönlichen Überblick.</p>
+                    <h4>Deine persönliche Datenanalyse</h4>
+                    <p>
+                        Vergleiche deine Statistik mit der Gesamtstatistik oder anderen Accounts. Filtere die
+                        Daten nach selbstgewählten Kriterien und betreibe so deine eigene Datenanalyse.
+                    </p>
                 </div>
             </div>
         </div>
@@ -124,11 +142,11 @@
     <section>
         <h3>Das ist flux.fail</h3>
         <p>
-            flux.fail ist eine App, mit der die Benutzer in einem spielerischen Format kostenlos die Verspätungen ihrer
+            flux.fail ist eine App mit der die Benutzer in einem spielerischen Format kostenlos die Verspätungen ihrer
             öffentlichen Verkehrsmittel melden und verfolgen können. Gemeldete Verspätungen werden öffentlich gemacht,
             so dass andere Benutzer diese sehen und sich somit in Echtzeit gegenseitig über derzeit auftretende Verspätungen
             informieren und gegebenenfalls rechtzeitig auf alternative Verbindungen ausweichen können. Außerdem wird dem
-            wartenden Fahrgast mit der App eine Möglichkeit gegeben, der Frustration über die Verspätung auch Ausdruck zu
+            wartenden Fahrgast mit der App eine Möglichkeit gegeben der Frustration über die Verspätung auch Ausdruck zu
             verleihen und das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
         </p>
     </section>
@@ -179,27 +197,24 @@
     </section -->
     <section>
         <h3>Priorität Datenschutz</h3>
-        <div class="grid">
-            <div class="col">
-                <p>
-                    Für die Registrierung bei flux.fail werden keine personenbezogenen Daten erfasst. Einzig und allein
-                    eine gültige E-Mail Adresse ist erforderlich. An die Adresse wird eine E-Mail mit einem Login Link
-                    versandt, der nach einmaliger Nutzung verfällt. Mit Klick auf diesen Link wird ein Session-Cookie im
-                    Browser des Benutzers gesetzt. flux-fail errechnet jetzt den Crypto-Hash der E-Mail Adresse und
-                    verwendet ihn als ID zum Speichern von Verspätungen. So können die gemeldeten Verspätungen Nutzern
-                    zugeordnet werden, ohne dass sie ohne Weiteres Personen zuordnen werden können.
-                </p>
-                <p>
-                    In unserer Datenbank befinden sich also überhaupt keine Benutzer-, bzw. Accountdaten. Es existieren
-                    auch keine Passwörter, die gestohlen werden könnten.
-                    Benutzerdaten werden erst dann gepeichert, wenn der User sich dazu entscheidet diese optionalen
-                    Daten anzugeben, beispielsweise wenn er den Newsletter abonniert.
-                </p>
-                <p>
-                    Dem Schutz der persönlichen Daten aller Nutzer wird bei flux.fail allerhöchste Proirität
-                    beigemessen.
-                </p>
-            </div>
+        <div class="col">
+            <p>
+                Dem Schutz der persönlichen Daten aller Nutzer wird bei flux.fail allerhöchste Proirität
+                beigemessen.
+            </p>
+            <p>
+                Für die Registrierung bei flux.fail werden keine personenbezogenen Daten erfasst. Einzig und allein
+                eine gültige E-Mail Adresse ist erforderlich. An die Adresse wird eine E-Mail mit einem Login Link
+                versandt, der nach einmaliger Nutzung verfällt. Mit Klick auf diesen Link wird ein Session-Cookie im
+                Browser des Benutzers gesetzt. Die App errechnet jetzt den Crypto-Hash der E-Mail Adresse und
+                verwendet diesen als ID zum Speichern von Verspätungen.
+            </p>
+            <p>
+                So wird gewährleistet, dass die gesammelten Bewegungsdaten nicht unmittelbar Personen zugeordnet
+                werden können - auch nicht nach einem nie ganz auszuschließendem Data-Leak. Zudem tritt die App wo
+                immer möglich als Datenschutzschild für den Benutzer auf, in dem sie beispielsweise die Anfragen an
+                die zahlreichen Verkehrsanbieter während der Suche nach einer alternativen Route anonymisiert.
+            </p>
         </div>
     </section>
     <section>
