--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Flux.Fail</title>
-    <link rel="stylesheet" href="fluxfail.css">
+    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="css/w3_theme.css">
+    <link rel="stylesheet" href="css/fluxfail.css">
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/ant-override.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#005cb2">
   </head>
