improve texting on landingpage

--- a/site/index.html
+++ b/site/index.html
@@ -26,9 +26,10 @@
     <section>
         <img class="logo_sub" src='./assets/logo_text.png' />
         <h3 class="w3-center">
-            VERSPÄTUNGEN ÖFFENTLICHER VERKEHRSMITTEL MELDEN.<br>
-            FRUST ABLASSEN, VORWÄRTS KOMMEN.<br>
-            FOREVER FREE.
+            WIR TRACKEN DIE VERSPÄTUNGEN DER ÖFFIS.<br>
+            NICHT DICH.<br />
+            OPEN DATA.<br />
+            OPEN SOURCE.
         </h3>
     </section>
     <section>
@@ -37,23 +38,22 @@
                 <img class="screenshot" src='./assets/screenshot1.png' />
             </div>
             <div class="col">
-                <h3>Alle aktuellen Meldungen im Delay-Stream</h3>
-
+                <h3>Die Idee ist ganz einfach!</h3>
                 <p>
-                    Wird irgendwo über flux.fail eine Verspätung gemeldet, taucht sie umgehend im flux.fail
-                    Delay-Stream auf. Die Information steht nun allen Nutzern zur Verfügung und wird auch für die
-                    allgemeinen Statistiken verwertet.
+                    Wir alle informieren uns gegenseitig über Verspätungen im Linienverkehr und veröffentlichen die
+                    gesammelten Daten so, dass sie für jeden einsehbar und leicht durchsuchbar sind.
                 </p>
                 <p>
-                    Selbstverständlich können problemlos Informationen zu einzelnen Linien abgefragt werden, bzw.
-                    häufig genutzte Linien als Favoriten gespeichert werden.
+                    Das erklärte Ziel ist es einen öffentlichkeitswirksamen Anreiz für die Verkehrsanbieter zu schaffen
+                    verstärkt Zeit und Geld in die eigene Zuverlässigkeit zu investieren.
                 </p>
                 <div class="info">
-                    <h4>Empower Yourself!</h4>
+                    <h4>Gemeinsam sind wir viele!</h4>
                     <p>
-                        Lade Freunde dazu ein, auf deiner Linie mitzumachen.
+                        Lade Freunde dazu ein in deiner Stadt mitzumachen.
                         So bekommst du mehr aktuelle Informationen.
-                        Je mehr Nutzer, desto mehr Verspätungs-Meldungen.</p>
+                        Je mehr Nutzer, desto mehr Verspätungs-Meldungen.
+                    </p>
                 </div>
             </div>
 
@@ -65,16 +65,22 @@
                 <img class="screenshot" src="./assets/screenshot2.png" />
             </div>
             <div class="col">
-                <h3>Erhalte Angebote zu Alternativen Verkehrsmitteln</h3>
+                <h3>Privacy &amp; Datenschutz</h3>
                 <p>
-                    Sobald wir eine kritische Nutzerbasis erreichen, werden Dir nach der Meldung einer Verspätung
-                    - sofern vorhanden - alternative Linien oder Verkehrsmittel angeboten. Das kann eine andere
-                    Verbindung mit den öffentlichen Verkehrsmitteln sein, aber auch ein Angebot von Dritten, z.B.
-                    Taxi-Anbieter, Fahrradverleih oder Car-Sharing-Unternehmen.
+                    Um sich zu registrieren ist einzig eine gültige E-Mail Adresse erforderlich.
+                    Wir erfassen bewusst keine weiteren personenbezogenen Daten.
+                </p>
+                <p>
+                    Der Zweck von flux.fail besteht ausdrücklich in der Erfassung und Veröffentlichung der
+                    Verspätungszeiten der öffentlichen Verkehrsmittel; ausdrücklich nicht in der Erfassung,
+                    Veröffentlichung und/oder Verarbeitung der Bewegungsdaten der Nutzer.
                 </p>
                 <div class="info">
-                    <h4>Anders fahren, Zeit sparen!</h4>
-                    <p>Es kann viel Zeit sparen, über aktuelle Ausweichmöglichkeiten informiert zu sein.</p>
+                    <h4>Datenschutz durch Datenarmut!</h4>
+                    <p>
+                        Der allerbeste Datenschutz besteht ganz einfach darin Daten gar nicht erst zu erfassen.
+                        Denn Daten die man nie hatte, können auch nicht weitergegeben oder gestohlen werden.
+                    </p>
                 </div>
             </div>
         </div>
@@ -85,23 +91,22 @@
                 <img class="screenshot" src="./assets/screenshot3.png" />
             </div>
             <div class="col">
-                <h3>Sammle Punkte und erhalte Flux-Kompensationen</h3>
+                <h3>Open Data. Open Source.</h3>
                 <p>
-                    Jede gemeldete Verspätung ist zu Beginn einen Punkt wert. Andere Benutzer können Meldungen
-                    bestätigen, dadurch steigt der Wert der Meldung um jeweils einen weiteren Punkt. Die Punkte
-                    sollen in erster Linie dem einzelnen Benutzer dabei helfen die Zuverlässigkeit und Richtigkeit
-                    der Meldungen besser bewerten zu können.
+                    Wir glauben daran, dass die Offenlegung von Quellcode zu einer insgesamt besseren Qualität von
+                    Software führt. Daher ist flux.fail 100% open source. So kann jeder selbst überprüfen welche Daten
+                    wir erfassen und wie wir mit ihnen umgehen.
                 </p>
                 <p>
-                    Ab Erreichen einer kritischen Nutzerbasis ist angedacht, dass Punkte gesammelt und gegen
-                    Wertgutscheine und Rabattkarten getauscht werden können.
+                    Alle gemeldeten Verspätungen sind sofort öffentlich abrufbar.
+                    Es soll ein Statistik Interface bereitgestellt werden, mit dessen Hilfe dann jeder selbst seine ganz
+                    persönliche Datenanalyse betreiben und Metriken ermitteln kann.
                 </p>
                 <div class="info">
-                    <h4>Mach aus dem Ärgernis ein kleines Spiel.</h4>
+                    <h4>Flux Code Community</h4>
                     <p>
-                        Punkte sammeln bringt nicht nur Vorteile, sondern macht auch Spaß, denn so kannst du dich
-                        mit anderen Benutzern messen. Na, wer hat in eurem Team die meisten Verspätungen auf dem
-                        Arbeitsweg?
+                        Werde Teil der Flux Code Community und leiste deinen Beitrag. Gemeinsam schaffen wir eine
+                        Plattform, die unser aller Alltag ein bisschen angenehmer macht.
                     </p>
                 </div>
             </div>
@@ -110,7 +115,7 @@
     </section>
 
 
-    <section>
+    <!-- section>
         <div class="grid">
             <div class="col col-center">
                 <img class="screenshot" src="./assets/screenshot4.png" />
@@ -138,84 +143,22 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section>
-        <h3>Das ist flux.fail</h3>
-        <p>
-            flux.fail ist eine App mit der die Benutzer in einem spielerischen Format kostenlos die Verspätungen ihrer
-            öffentlichen Verkehrsmittel melden und verfolgen können. Gemeldete Verspätungen werden öffentlich gemacht,
-            so dass andere Benutzer diese sehen und sich somit in Echtzeit gegenseitig über derzeit auftretende Verspätungen
-            informieren und gegebenenfalls rechtzeitig auf alternative Verbindungen ausweichen können. Außerdem wird dem
-            wartenden Fahrgast mit der App eine Möglichkeit gegeben der Frustration über die Verspätung auch Ausdruck zu
-            verleihen und das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
-        </p>
-    </section>
-    <!-- >section>
-        <h3>Die Ausgangslage</h3>
-        <div class="grid">
-
-            <div class="col">
-                <p>Im Jahr 2017 gab es in Deutschland 18,5 Millionen Pendler, die zum Teil längere Arbeitswege in Kauf
-                    nahmen. Das ist ein neuer Rekord und umfasst bald 60% aller Beschäftigten. Dabei zählen als Pendler
-                    aber nur diejenigen, die auf dem Arbeitsweg das Ortsschild passieren, was alle Beschäftigten, die
-                    innerhalb deutscher Großstädte pendeln, vollständig ausschließt. Nach einer Statistik des
-                    Bundesinstituts für Bau-, Stadt- und Raumforschung, wählen dabei nur circa 45% das eigene Auto.
-                    Alle anderen Pendler sind auf öffentliche Verkehrsmittel angewiesen, hauptsächlich Bus, Bahn,
-                    U-Bahn, S-Bahn und Tram.
-                </p>
-                <p>Öffentliche Verkehrmittel unterliegen jedoch häufig andauernden und wiederkehrenden Verspätungen
-                    oder sogar Ausfällen. Busse verspäten sich, weil wochenlang nicht angemessen auf erhöhtes
-                    Verkehraufkommen oder Baustellen reagiert wird. Bahnen fallen aus, weil Gleise, Weichen oder
-                    Waggons nicht ausreichend gewartet wurden.</p>
-            </div>
-            <div class="col">
-
-                <p>Auf die Fahrplanauskünfte der Anbieter können sich die Fahrgäste dabei leider viel zu selten
-                    verlassen, Online Buchungs-Systeme informieren nicht immer rechtzeitig über auftretende Störungen.
-                    Fahrgäste, die häufiger den Verspätungen der öffentlichen Verkehrsmittel ausgeliefert sind, sind
-                    oft zu recht verärgert und fühlen sich machtlos.</p>
-                <img class="logo_sub" src='./assets/logo_sub.png' />
-            </div>
-        </div>
-    </section>
-    <section>
-        <h3>Daten als Unternehmenswert</h3>
-        <p>Mit flux.fail wird die Datenquelle für aktuelle Verkehrsinformationen dezentralisiert und an die Fahrgäste
-            gekoppelt. Die Nutzer erfahren im besten Fall sofort von Verspätungen, denen sie aktuell ausgeliefert sind.
-            Wird eine Verspätung ausreichend häufig gemeldet, kann sie als bestätigt angesehen werden und anderen
-            Plattformen oder Anbietern wie z.B. SD4M als sehr zuverlässige Verkehrsinformation übermittelt werden.
-        </p>
-        <p>Das Projekt „SD4M - Smart Data for Mobility“ entwickelt nach eigenen Aussagen eine branchenübergreifende
-            Serviceplattform, die sowohl Daten unterschiedlicher Mobilitätsanbieter als auch Daten aus sozialen
-            Netzwerken integriert, aufbereitet und dann den Nutzern zur Verfügung stellt. Ziel ist es, aus den
-            verschiedenen Quellen Verkehrsinformationen zu aggregieren, zu veredeln und anschließend zielgerichtet an
-            die individuellen Verkehrsteilnehmer zu übermitteln. Das Projekt ist auf zuverlässige und zeitnahe
-            Verkehrsinformationen angewiesen. Gefördert wird SD4M auch vom Bundesministerium für Wirtschaft und
-            Energie.</p>
-        <p>Innovativ an flux.fail ist, das es eine Plattform ist, die ausschliesslich von Nutzerdaten lebt, während
-            gleichzeitig jedoch keinerlei personenbezoge Nutzerdaten gespeichert werden.</p>
     </section -->
     <section>
-        <h3>Priorität Datenschutz</h3>
-        <div class="col">
-            <p>
-                Dem Schutz der persönlichen Daten aller Nutzer wird bei flux.fail allerhöchste Proirität
-                beigemessen.
-            </p>
-            <p>
-                Für die Registrierung bei flux.fail werden keine personenbezogenen Daten erfasst. Einzig und allein
-                eine gültige E-Mail Adresse ist erforderlich. An die Adresse wird eine E-Mail mit einem Login Link
-                versandt, der nach einmaliger Nutzung verfällt. Mit Klick auf diesen Link wird ein Session-Cookie im
-                Browser des Benutzers gesetzt. Die App errechnet jetzt den Crypto-Hash der E-Mail Adresse und
-                verwendet diesen als ID zum Speichern von Verspätungen.
-            </p>
-            <p>
-                So wird gewährleistet, dass die gesammelten Bewegungsdaten nicht unmittelbar Personen zugeordnet
-                werden können - auch nicht nach einem nie ganz auszuschließendem Data-Leak. Zudem tritt die App wo
-                immer möglich als Datenschutzschild für den Benutzer auf, in dem sie beispielsweise die Anfragen an
-                die zahlreichen Verkehrsanbieter während der Suche nach einer alternativen Route anonymisiert.
-            </p>
-        </div>
+        <h3>Das ist flux.fail</h3>
+        <p class="justified">
+            flux.fail ist eine Web-Plattform auf der die Benutzer in einem spielerischen Format kostenlos die Verspätungen
+            ihrer öffentlichen Verkehrsmittel melden und verfolgen können. Gemeldete Verspätungen werden öffentlich
+            gemacht, so dass die Benutzer sich in Echtzeit gegenseitig über derzeit auftretende Verspätungen informieren
+            und gegebenenfalls rechtzeitig auf alternative Verbindungen ausweichen können.
+        </p>
+        <p class="justified">
+            Außerdem wird dem wartenden
+            Fahrgast dadurch die Möglichkeit gegeben seiner Frustration über die Verspätungen Ausdruck zu verleihen und
+            das Versagen der Verkehrsanbieter an angebrachter Stelle öffentlichkeitswirksam anzuprangern.
+        </p>
+        <br /><br />
+        <a href="https://app.flux.fail/" class="btn">Jetzt anmelden!</a>
     </section>
     <section>
         <img class="no_mobile" src='./assets/logo_big.png' />
