added open beta notice

--- a/site/index.html
+++ b/site/index.html
@@ -32,6 +32,9 @@
             OPEN SOURCE.
         </h3>
     </section>
+    <div class="w3-container w3-text-red">
+        <center class="w3-panel"><strong>OPEN BETA</strong></center>
+    </div>
     <section>
         <div class="grid">
             <div class="col col-center">
